--- a/netlify.toml
+++ b/netlify.toml
@@ -40,3 +40,9 @@ HUGO_ENABLEGITINFO = "true"
   to = "https://drive.google.com/file/d/1QfZ5IwYYpU-Vs7e0-iJ8lHTCZQMpY7BU/view"
   status = 301
   force = true   
+
+[[redirects]]
+  from = "/about"
+  to = "/"
+  status = 301
+  force = true
