--- a/netlify.toml
+++ b/netlify.toml
@@ -1,42 +1,14 @@
 [build]
 publish = "public"
-command = "hugo --gc --minify"
+command = "hugo"
 
 [context.production.environment]
 HUGO_VERSION = "0.87.0"
 HUGO_ENV = "production"
 HUGO_ENABLEGITINFO = "true"
 
-[context.split1]
-command = "hugo --gc --minify --enableGitInfo"
-
-[context.split1.environment]
-HUGO_VERSION = "0.87.0"
-HUGO_ENV = "production"
-
-[context.deploy-preview]
-command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
-
-[context.deploy-preview.environment]
-HUGO_VERSION = "0.87.0"
-
-[context.branch-deploy]
-command = "hugo --gc --minify -b $DEPLOY_PRIME_URL"
-
-[context.branch-deploy.environment]
-HUGO_VERSION = "0.87.0"
-
-[context.next.environment]
-HUGO_ENABLEGITINFO = "true"
-
 [[redirects]]
   from = "/about/css/*"
-  to = "/css/*"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "/post/css/*"
-  to = "/css/*"
-  status = 301
-  force = true 
+  to = "/css/:splat"
+  status = 200
+# force = true
